chore: resolve some console errors and security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
-    "d3": "^5.12.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
     "d3-collection": "^1.0.7",
@@ -64,6 +63,7 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
+    "html-react-parser": "^1.4.9",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.functions": "^4.3.0",
@@ -86,7 +86,6 @@
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^1.3.4",
-    "react-html-renderer": "^0.3.2",
     "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
@@ -153,8 +152,6 @@
     "postcss-prefixer": "^2.1.2",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
     "rollup": "^2.59.0",
