--- a/package.json
+++ b/package.json
@@ -47,20 +47,11 @@
     "url": "https://github.com/chatatechnologies/react-autoql/issues"
   },
   "dependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
     "@babel/runtime": "^7.16.0",
     "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "d3": "^5.12.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
     "d3-collection": "^1.0.7",
@@ -72,33 +63,30 @@
     "d3-transition": "^1.2.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
-    "install": "^0.13.0",
-    "ionicons": "^5.5.2",
+    "html-react-parser": "^1.4.9",
     "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.functions": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
     "lodash.includes": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.omit": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "lodash.some": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
-    "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
-    "numbro": "^2.2.0",
     "parse-num": "^1.0.0",
     "prop-types": "^15.7.2",
-    "rc-drawer": "^1.10.1",
+    "rc-drawer": "^4.4.3",
     "react-autosuggest": "^9.4.3",
     "react-collapse": "^5.1.1",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
-    "react-grid-layout": "^0.16.6",
-    "react-html-renderer": "^0.3.2",
-    "react-icons": "^3.8.0",
+    "react-grid-layout": "^1.3.4",
+    "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
@@ -118,8 +106,14 @@
     "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-image": "^2.0.5",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -133,6 +127,7 @@
     "axios-mock-adapter": "^1.18.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
+    "babel-plugin-import": "^1.13.3",
     "babel-preset-es2015-rollup": "^3.0.0",
     "check-prop-types": "^1.1.2",
     "cz-conventional-changelog": "^3.2.0",
@@ -157,25 +152,27 @@
     "postcss-prefixer": "^2.1.2",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
     "rollup": "^2.59.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-gzip": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "semantic-release": "^17.0.8",
     "semantic-release-cli": "^5.3.1",
     "watch": "^1.0.2"
   },
   "peerDependencies": {
-    "react": ">=16.2",
-    "react-dom": ">=16.13.1"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
