--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
     "d3-collection": "^1.0.7",
-    "d3-interpolate": "^1.3.2",
-    "d3-scale": "^3.2.0",
+    "d3-color": "^3.1.0",
+    "d3-dispatch": "^3.0.1",
+    "d3-format": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
-    "d3-svg-legend": "^2.25.6",
-    "d3-transition": "^1.2.0",
+    "d3-transition": "^3.0.1",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
     "html-react-parser": "^1.4.9",
