--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-autoql",
-  "version": "0.0.0-semantically-released",
+  "version": "8.0.3-alpha.11",
   "description": "React Widget Library",
   "main": "dist/autoql.cjs.js",
   "module": "dist/autoql.esm.js",
@@ -36,7 +36,6 @@
     "format": "prettier --write 'src/**/*.{js,css,md,json}' --config ./.prettierrc",
     "prepare": "npx rimraf dist && npm run build",
     "prepublishOnly": "npx rimraf dist && npm run build",
-    "semantic-release": "semantic-release",
     "cz": "npx git-cz"
   },
   "style": "dist/autoql.esm.css",
@@ -63,19 +62,19 @@
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@react-icons/all-files": "^4.1.0",
-    "axios": "^0.21.2",
+    "autoql-fe-utils": "1.0.19",
+    "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
-    "d3-collection": "^1.0.7",
     "d3-color": "^3.1.0",
     "d3-dispatch": "^3.0.1",
     "d3-format": "^3.1.0",
     "d3-interpolate": "^3.0.1",
-    "d3-scale": "3.3.0",
-    "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "d3-time": "^3.0.0",
-    "d3-transition": "^3.0.1",
+    "d3-transition": "3.0.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.8.36",
     "html-react-parser": "^1.4.9",
@@ -100,7 +99,7 @@
     "react-contenteditable": "^3.3.5",
     "react-date-range": "^1.4.0",
     "react-device-detect": "^2.2.3",
-    "react-grid-layout": "^1.3.4",
+    "react-grid-layout": "1.3.4",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.16.1",
@@ -135,11 +134,6 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-image": "^2.0.5",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.6",
-    "@semantic-release/npm": "^9.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "autoprefixer": "^9.7.0",
     "axios-mock-adapter": "^1.18.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -163,7 +157,6 @@
     "jest-mock-axios": "^4.2.0",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.0.2",
-    "node-sass": "^7.0.1",
     "npm-watch": "^0.11.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
@@ -181,15 +174,15 @@
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-visualizer": "^5.6.0",
-    "semantic-release": "^19.0.3"
+    "sass": "^1.67.0"
   },
   "peerDependencies": {
     "react": ">=16.8.1",
     "react-dom": ">=16.8.1"
   },
   "engines": {
-    "node": "14.17.3",
-    "npm": "6.14.13"
+    "node": ">=14.17.3",
+    "npm": ">=6.14.13"
   },
   "config": {
     "commitizen": {
