--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
-    "d3-scale": "3.3.0",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-transition": "3.0.1",
